botão de gráfico na páfina de análises arrumado

--- a/flask/app/templates/analytics.html
+++ b/flask/app/templates/analytics.html
@@ -272,7 +272,7 @@ function mudar() {
                 </tbody>
             </table>
         </div>
-         <div class="resultado" id="tablemovel" style="display: none">
+         <div class="resultado" id="tablemovel" style="display: none;">
              <hr>
             <h3>Média Móvel</h3>
             <table class="retorno">
@@ -284,9 +284,7 @@ function mudar() {
                   
                 </tbody>
             </table>
-              <div id="graphDown" style="float: right">
-                  <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" style="background-color: dodgerblue"> <i class='fas fa-chart-line'></i> Gráficos</button>
-            </div>
+              <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" style="background-color: dodgerblue; margin-top: 20px;"> <i class='fas fa-chart-line'></i> Gráficos</button>
         </div>
          <div class="resultado" id="tableln" style="display: none">
              <hr>
@@ -303,9 +301,7 @@ function mudar() {
                   
                 </tbody>
             </table>
-             <div id="graphDown" style="float: right">
-                  <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" style="background-color: dodgerblue"> <i class='fas fa-chart-line'></i> Gráficos</button>
-            </div>
+            <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" style="background-color: dodgerblue;  margin-top: 20px;"> <i class='fas fa-chart-line'></i> Gráficos</button>
         </div>
     </div>
 
