download dados rolagem + gráfico média móvel

--- a/flask/app/static/css/main.css
+++ b/flask/app/static/css/main.css
@@ -359,6 +359,7 @@
     font-family: "Georgia", serif !important;
     padding-left: 20px;
     margin-top: 50px;
+    margin-bottom: 3%;
 }
 .calc{
     font-size: 1.2em;
