--- a/flask/app/templates/analytics.html
+++ b/flask/app/templates/analytics.html
@@ -112,7 +112,7 @@ function mudar() {
                                     <span class="checkmark"></span>
                                   </label>
                                   <label class="titleForm calculos">Rolagem do Vencimentos em Aberto
-                                    <input type="checkbox" id="rolagem" name="rolagem">
+                                    <input type="checkbox" id="rolagem" name="rolagem" >
                                     <span class="checkmark"></span>
                                   </label>
                               </li>
@@ -284,7 +284,7 @@ function mudar() {
                   
                 </tbody>
             </table>
-              <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" style="background-color: dodgerblue; margin-top: 20px;"> <i class='fas fa-chart-line'></i> Gráficos</button>
+              <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" id="graficoMM" onclick="window.open('mediaMovel.html',  '_blank')" style="background-color: dodgerblue; margin-top: 20px;"> <i class='fas fa-chart-line'></i> Gráfico - Média Móvel </button>
         </div>
          <div class="resultado" id="tableln" style="display: none">
              <hr>
@@ -301,7 +301,6 @@ function mudar() {
                   
                 </tbody>
             </table>
-            <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" style="background-color: dodgerblue;  margin-top: 20px;"> <i class='fas fa-chart-line'></i> Gráficos</button>
         </div>
     </div>
 
