download dados análise

--- a/flask/app/templates/analytics.html
+++ b/flask/app/templates/analytics.html
@@ -301,9 +301,26 @@ function mudar() {
                   
                 </tbody>
             </table>
+
+            <table class="retorno" style="margin-top: 2%">
+                <tr>
+                    <th style="background-color: #7b88d1">Média Retorno Simples</th>
+                    <th style="background-color: #7b88d1">Risco</th>
+                    <th style="background-color: #7b88d1">Média Retorno Contínuo</th>
+                    <th style="background-color: #7b88d1">Volatilidade</th>
+                </tr>
+                <tbody id = "bodylnaux">
+                  
+                </tbody>
+            </table>
         </div>
+
+
     </div>
 
+        <div id="ADown"; style="display: none; text-align: right; margin-bottom: 3%; margin-right: 5%;">
+          <button id="aButton" type="button" class="myBtn" style="background-color: #ff8000; size: 5%"><i class="fas fa-download"> </i> Download dos Resultados</button>
+        </div>
 </body>
 <script>
     var flag = 1;
