ajuste no front de análises

--- a/flask/app/templates/analytics.html
+++ b/flask/app/templates/analytics.html
@@ -302,12 +302,12 @@ function mudar() {
                 </tbody>
             </table>
 
-            <table class="retorno" style="margin-top: 2%">
+            <table class="retornoLn" style="margin-top: 2%">
                 <tr>
-                    <th style="background-color: #7b88d1">Média Retorno Simples</th>
-                    <th style="background-color: #7b88d1">Risco</th>
-                    <th style="background-color: #7b88d1">Média Retorno Contínuo</th>
-                    <th style="background-color: #7b88d1">Volatilidade</th>
+                    <th>Média Retorno Simples</th>
+                    <th>Risco</th>
+                    <th>Média Retorno Contínuo</th>
+                    <th>Volatilidade</th>
                 </tr>
                 <tbody id = "bodylnaux">
                   
@@ -315,7 +315,7 @@ function mudar() {
             </table>
         </div>
 
-
+        <hr>
     </div>
 
         <div id="ADown"; style="display: none; text-align: right; margin-bottom: 3%; margin-right: 5%;">
