--- a/flask/app/static/css/main.css
+++ b/flask/app/static/css/main.css
@@ -392,7 +392,18 @@
     padding: 8px;
     text-align: right;
 }
-
+.retornoLn th{
+    background-color: #0D47A1;
+    border: 1px solid #dddddd;
+    text-align: center;
+    padding: 8px;
+    color: white;
+}
+.retornoLn td {
+    border: 1px solid #dddddd;
+    padding: 8px;
+    text-align: right;
+}
 /* ----------------Redefinição do checkbox----------------------------------------------------------- */
 .calculos {
     display: block;
