página de home alterada

--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -55,7 +55,7 @@
     <!-- --------------------------Commodities -------------------------- -->
     <div class="container-commo" >
         <h2>Commodities</h2>
-        <div class="row">
+        <div class="row" style="margin: 0">
             <div class="col-sm-3 square">
                 <a href="boi.html">
                     <div class="barraAzul" >
@@ -97,10 +97,27 @@
             </div>
         </div>
     </div>
-       <!-- --------------------------Graphics -------------------------- -->
-    <div class="container-graphi">
-        <h2>Graphics</h2>
+     <div class="container-blue">
+         <div id="text-home">
+             <h2>O que é o CPA?</h2>
+             <br>
+             <p>O CPA <i>(Commodities Price Analytics)</i> é um sistema web desenvolvido por um grupo de estudantes do curso de ciência da computação da Universidade Federal de São Carlos - Campus Sorocaba, com auxílio do Professor Doutor José César Cruz Júnior do departamento de Economia. O sistema de tem como objetivo facilitar a análise e manipulação de dados referentes ao ajuste diário do preço dos contratos e cotações das principais commodities brasileiras, Boi gordo, Café Arábica 4/5, Milho e Soja. </p>
+      
+             <p>Você pode visualizar as cotações diárias na página da commoditie de sua preferência, nessa página você pode buscar por um intervalo de datas e aplicar diversos filtros, você também pode fazer downloads deste dados, o botão aparecerá assim que a busca for concluída. Além disso, há opção de gerar gráficos, na qual você visualizar o gráfico de linhas e o gráfico candlestick.   </p>
+             
+             <p>Na página de Analytics, você pode fazer diversos cálculos e operações que ajudarão nas suas análises. As opções de cálculo são: Média diária, semanal, quinzenal, mensal, Desvio padrão, Média móvel, operações com Ln, como volatilidade, retorno simples, retorno contínuo, e Rolagem do primeiro vencimento em aberto. Você também é capaz de realizar o download dos resultados, além disso, algumas operações disponibilizam gráficos, como a opção de rolagem e média móvel.</p>
+         </div>
     </div>
+    <div class="container-white">
+        <h2>O que são commodities? O que é o ajuste diário dos preços dos contratos (Ajuste do Pregão)?</h2>
+        <br>
+        <p>As commodities são mercadorias em estado bruto ou de simples industrialização, negociadas em escala mundial. A comercialização é estabelecida no mercado financeiro, com preços normalmente em dólar e que oscilam de acordo com a oferta e a demanda internacionais.</p>
+        <p>
+        Por tratar de um bem pouco variável, suas transações podem envolver mercadorias que sequer foram plantados, usando como exemplo as commodities agrícolas. Sacas de soja podem ser negociadas mesmo que não existam fisicamente nos silos. É o chamado contrato futuro, em que o produtor negocia na bolsa as próximas safras. A mercadoria não necessariamente será entregue ao comprador, que por sua vez já pode ter negociado os títulos com outro agente em função da volatilidade dos preços, na busca pelo lucro.
+        </p>
+        <p> Nos mercados futuros, os ajustes são feitos diariamente. Este mecanismo realiza a equalização automática da posição de todos os participantes neste mercado. No final do dia de cada pregão a bolsa divulga o preço de ajuste de cada contrato, esse preço geralmente é a média ponderada dos preços negociados até o fechamento. Se a cotação sobe no dia, o investidor terá o crédito adicionado à sua conta no dia seguinte, caso contrário, o investidor adquire um débito. Na prática, o ajuste diário configura como um mecanismo de proteção do mercado futuro contra possíveis inadimplências, uma vez que os participantes recebem seus lucros e pagam suas dívidas diariamente. </p>
+    </div>
+    
 </body>
 {% endblock %}
 </html
