icone da página adicionado

--- a/flask/app/templates/navbar.html
+++ b/flask/app/templates/navbar.html
@@ -13,6 +13,7 @@
           <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
           <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
           <script src="{{ url_for('static', filename='js/ajax.js') }}"></script>
+          <link rel="shortcut icon" type="image/png" href="../static/imagens/logo.png"/>
       <!--  <script type="text/javascript" src="login.js"></script>-->
     {% endblock %}
 </head>
