--- a/flask/app/templates/analytics.html
+++ b/flask/app/templates/analytics.html
@@ -321,6 +321,7 @@ function mudar() {
         <div id="ADown"; style="display: none; text-align: right; margin-bottom: 3%; margin-right: 5%;">
           <button id="aButton" type="button" class="myBtn" style="background-color: #ff8000; size: 5%"><i class="fas fa-download"> </i> Download dos Resultados</button>
         </div>
+{% include 'footer.html' %}     
 </body>
 <script>
     var flag = 1;
