--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -117,7 +117,9 @@
         </p>
         <p> Nos mercados futuros, os ajustes são feitos diariamente. Este mecanismo realiza a equalização automática da posição de todos os participantes neste mercado. No final do dia de cada pregão a bolsa divulga o preço de ajuste de cada contrato, esse preço geralmente é a média ponderada dos preços negociados até o fechamento. Se a cotação sobe no dia, o investidor terá o crédito adicionado à sua conta no dia seguinte, caso contrário, o investidor adquire um débito. Na prática, o ajuste diário configura como um mecanismo de proteção do mercado futuro contra possíveis inadimplências, uma vez que os participantes recebem seus lucros e pagam suas dívidas diariamente. </p>
     </div>
-    
+
+{% include 'footer.html' %}     
 </body>
 {% endblock %}
+   
 </html
