footer backgraund color mais escuro

--- a/flask/app/static/css/main.css
+++ b/flask/app/static/css/main.css
@@ -72,7 +72,7 @@
 }
 /* ------------------Footer---------------- */
 .myfooter{
-    background-color: #283593;
+    background-color: #1A237E;
     color: white;
     text-align: center;
     padding: 10px;
