--- a/flask/app/static/css/painel.css
+++ b/flask/app/static/css/painel.css
@@ -166,3 +166,21 @@ input[type=date] {
     margin: 0 5px 20px 5px;
     padding: 8px;
 }
+/* ----------------Página users do Painel de Config---------------------------- */
+#users{
+    padding: 30px 30px 0 18%;
+}
+#users h1{
+    margin: 0;
+}
+#users p{
+    margin-bottom: 40px;
+    text-align: justify; 
+}
+#users h4{
+    font-weight: bold;
+}
+.titleForm2{
+    font-size: 1.3em;
+    font-weight: normal;
+}
