--- a/flask/app/static/css/painel.css
+++ b/flask/app/static/css/painel.css
@@ -184,3 +184,23 @@ input[type=date] {
     font-size: 1.3em;
     font-weight: normal;
 }
+/* ------------------------ Loading --------------------------- */
+#loading {
+   width: 100%;
+   height: 100%;
+   top: 0;
+   left: 0;
+   position: fixed;
+   display: block;
+   opacity: 0.7;
+   background-color: #fff;
+   z-index: 99;
+   text-align: center;
+}
+
+#loading-image {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  z-index: 100;
+}
