--- a/flask/app/templates/ajusteTable.html
+++ b/flask/app/templates/ajusteTable.html
@@ -11,7 +11,8 @@
           <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
           <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
           <script src="{{ url_for('static', filename='js/ajax.js') }}"></script>
-          <script src="{{ url_for('static', filename='js/csv.js') }}"></script>          
+          <script src="{{ url_for('static', filename='js/csv.js') }}"></script>
+    <link rel="shortcut icon" type="image/png" href="../static/imagens/logo.png"/>
       <!--  <script type="text/javascript" src="login.js"></script>-->
 </head>
 <!-- ----------------------Menu ------------------------- -->
