--- a/flask/app/templates/ajusteTable.html
+++ b/flask/app/templates/ajusteTable.html
@@ -104,7 +104,7 @@
                 <th>Preço do Ajuste Atual {%block unidade2%} {% endblock %}</th>
                 <th>Variação {%block unidade3%} {% endblock %}</th>
                 <th>Valor do Ajuste por Contrato</th>
-                <th>Número por Contrato</th>
+                <th>Número de Contratos em Aberto</th>
                 <th>Volume</th>
                	<tbody id = "ajusteTableB">
                	
