--- a/flask/app/templates/candle.html
+++ b/flask/app/templates/candle.html
@@ -97,7 +97,7 @@
 
             }
 
-            if (cont + 1 >= data.length) {
+            if (cont + 1 > data.length) {
                 alert("Não foi possível gerar o Candlestick! Os vencimentos selecionados não apresentam contratos em aberto nessa data");
                 window.close();
                 return;
