--- a/flask/app/templates/footer.html
+++ b/flask/app/templates/footer.html
@@ -19,8 +19,8 @@
 </head>
 <!-- ----------------------Menu ------------------------- -->
 {% block footer %}
-<footer class="page-footer font-small myfooter">
-    <div>
+<footer class="page-footer font-small myfooter" style="vertical-align: bottom;">
+    <div class="footer-copyright text-center py-3">
         <h6>Desenvolvido por:</h6>
         <p>Caroline Aparecida de Paula Silva <br>Isabela Sayuri Matsumoto<br>Isabella Soares de Lima</p>
     </div>
