--- a/flask/app/templates/painel.html
+++ b/flask/app/templates/painel.html
@@ -65,7 +65,7 @@
                     <br>
                     <br>
                     <form method="POST">
-                        <button value="T" type="submit" name="backup" class="mybtn" style="background-color: #F57C00"><i class='fas fa-database'></i> Backup Dados</button>
+                        <button value="T" type="submit" name="backup" class="mybtn" style="background-color: #F57C00" onclick="menssage('2')"><i class='fas fa-database'></i> Backup Dados</button>
                     </form>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                             <option value="M">Milho</option>
                             <option value="S">Soja</option>
                         </select>
-                        <button type="submit" class="mybtn" style="width: 70%; background-color: #c62828; margin-left: 15%" onclick="menssage()"><span class="glyphicon glyphicon-trash"></span> Excluir Dados</button>
+                        <button type="submit" class="mybtn" style="width: 70%; background-color: #c62828; margin-left: 15%" onclick="menssage('1')"><span class="glyphicon glyphicon-trash"></span> Excluir Dados</button>
                     </form>
                 </div>
             </div>
@@ -94,10 +94,20 @@
         <div id="loading" style="display: none">
             <img id="loading-image" src="../static/imagens/load.gif" alt="Loading..." />
         </div>
-</body>
     <script>
-        function menssage(){
-            alert("Sucesso, quantidade de linhas deletadas = " + {{ row }})
+        function menssage(op){
+            if (op == '1'){
+                row = {{ row  | safe}}
+                alert("Sucesso, quantidade de linhas deletadas = " + row)
+            }else{
+                x = {{foi | safe}}
+                if(x == 1){
+                    alert("Backup realizado com sucesso!")
+                }else{
+                     alert("Não foi possível realizar o backup")
+                }
+            }
         }
     </script>
+</body>
 </html>
