flavIcon página de gráficos

--- a/flask/app/templates/lines.html
+++ b/flask/app/templates/lines.html
@@ -3,6 +3,7 @@
     <head>
         <title>CPA - Gráficos </title>
           <meta charset="utf-8">
+           <link rel="shortcut icon" type="image/png" href="../static/imagens/logo.png"/>
     </head>
 
     <body>
@@ -23,6 +24,7 @@
     <!-- Plotly.js -->
     <script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 
     <script type="text/javascript">
 
