--- a/flask/app/templates/rolagem.html
+++ b/flask/app/templates/rolagem.html
@@ -16,6 +16,7 @@
         <!-- Plotly.js -->
         <script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"></script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+         <link rel="shortcut icon" type="image/png" href="../static/imagens/logo.png"/>
     </head>
 
     <body>
