--- a/flask/app/templates/candle.html
+++ b/flask/app/templates/candle.html
@@ -3,13 +3,14 @@
     <head>
         <title>CPA - Gráficos </title>
           <meta charset="utf-8">
+           <link rel="shortcut icon" type="image/png" href="../static/imagens/logo.png"/>
     </head>
 
     <body>
  
     <div class="header">
         <h2>
-            Candle Stick
+            Candlestick
         </h2>
     </div>
  
